2023-10-29  Shiro Kawai  <shiro@acm.org>

	* test/dbd.scm: Fix character set info test for possible variations
	  (utf8mb3_general_ci).

2022-04-17  Shiro Kawai  <shiro@acm.org>

	* Release 0.4.1

2022-04-15  Shiro Kawai  <shiro@acm.org>

	* dbd_mysql.c: Replace my_bool -> bool, as the MySQL 8.0.1 dropped
	  my_bool type.
	  https://github.com/kahua/Gauche-dbd-mysql/issues/5
	* test/dbd.scm: Allow utf8mb3 in charset reporting

2021-03-28  Shiro Kawai  <shiro@acm.org>

	* dbd/mysql.scm: Avoid conditional definition form such as
	  (when <something> (define ...)).  It is invalid in RnRS, and Gauche
	  never officially supports them---it just happens that Gauche didn't
	  check the error.  Now, Gauche will warn them on 0.9.11 and eventually
	  rejects them.

2019-12-18  Shiro Kawai  <shiro@acm.org>

	* dbd_mysql.c (Scm_Init_dbd_mysql): Use mysql_library_init instead
	  of my_init(); the latter isn't provided by MariaDB.
	* dbd_mysql.h: Remove #includes for mysql internal headers.

2019-01-08  Shiro Kawai  <shiro@acm.org>

	* dbd_mysql.c (mysql_init_param): Allow u8vector as param to
	  pass blob value.

2018-12-24  Shiro Kawai <shiro@acm.org>

	* Release 0.4 - This is a version that requires 0.9.7 Gauche.

	* Release 0.3 - This is a snapshot that works with pre-0.9.7 Gauche.

2014-10-18  Katsuyuki Tateishi <kt@wheel.jp>

	* Fix: error on fetching MYSQL_TIME_TYPE field

	* Change: string format for DATETIME is changed to 'YYYY-MM-DD
	  HH:DD:SS' from 'YYYY-MM-DD HH:DD:SS.FFFFFF' when FFFFFF, fractional
	  seconds, is zero (in many cases this condition will be met).

2014-10-16  Katsuyuki Tateishi  <kt@wheel.jp>

	* Fix: check get_charset_number existence to avoid dynamic load error.

2014-06-26  Tatsuya BIZENN  <bizenn@visha.org>

	* Fix: improper initialization: add my_init() calling and drop
		load_defaults()(obsolet function?).

	* Fix: drop "set names <character set>" and now mysql_set_character_set()
		required.  So now we support MySQL 5.0.7 or later.
