@@ -1,3 +1,7 @@
+2024-07-15  Shiro Kawai  <shiro@acm.org>
+
+	* dbd_mysqllib.scm: stub -> scm
+
 2023-10-29  Shiro Kawai  <shiro@acm.org>
 
 	* test/dbd.scm: Fix character set info test for possible variations
